traefik/deployments.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: traefik-deployment
  namespace: ${TRAEFIK_NAMESPACE}
  labels:
    app: traefik

spec:
  replicas: 1
  selector:
    matchLabels:
      app: traefik
  template:
    metadata:
      labels:
        app: traefik
    spec:
      serviceAccountName: traefik-account
      containers:
        - name: traefik
          image: traefik:v3.0.0-rc1
          args:
            - --api.insecure
            - --providers.kubernetesingress
            # Enable tracing
            - --tracing=true
            - --tracing.serviceName=traefik
            - --tracing.otlp=true
            - --tracing.otlp.grpc=true
            - --tracing.otlp.grpc.endpoint=otelcollector:4317
            - --tracing.otlp.grpc.insecure=true
          ports:
            - name: web
              containerPort: 80
              hostPort: 80
            - name: dashboard
              containerPort: 8080
              hostPort: 8080
      nodeSelector:
        ingress-ready: "true"
      tolerations:
        - key: "node-role.kubernetes.io/control-plane"
          operator: "Equal"
          effect: "NoSchedule"
        - key: "node-role.kubernetes.io/master"
          operator: "Equal"
          effect: "NoSchedule"
